<resources>
    <string name="app_name">shopping_store</string>
    <!--activity_register.xml-->
    <string name="register_text">Registrar</string>
    <string name="password_text">Contraseña</string>
    <string name="email_text">Correo electrónico</string>
    <string name="name_text">Nombre</string>
    <string name="user_name">Registro de Usuario</string>

    <!--activity_login.xml-->
    <string name="email_text_login">Correo electrónico</string>
    <string name="password_text_login">Contraseña</string>
    <string name="login_text">Iniciar sesión</string>
    <string name="dont_have_account_text">¿No tienes cuenta? Regístrate</string>
    <string name="take_photo">Tomar Foto</string>

    <!--item_product.xml-->
    <string name="product_name">Nombre del Producto</string>
    <string name="price_text">Precio</string>
    <string name="add_text">Agregar</string>
    
    <!--activity_product_list.xml-->
    <string name="list_of_products">Lista de Productos</string>
    <string name="view_shopping_cart">Ver carrito</string>
    
    <!--activity_cart.xml-->
    <string name="your_shopping_cart">Tu carrito de compras</string>
    <string name="cart_total">Total: $0.00</string>
    <string name="pay">pagar</string>
</resources>