<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#F4F4F9"
    android:padding="24dp"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="24sp"
        android:textColor="#3F51B5"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="12dp"
        android:hint="@string/name_text"
        android:padding="12dp"
        android:textColor="#333"
        android:textColorHint="#888"
        tools:ignore="Autofill,TextFields,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="12dp"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#333"
        android:textColorHint="#888"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="12dp"
        android:hint="@string/password_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#333"
        android:textColorHint="#888"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFF"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/button_background"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
