<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="16dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/product_name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/price_text"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:layout_marginStart="16dp" />
</LinearLayout>
